--- a/es-tps-cinema/es-tps-cinema.csproj
+++ b/es-tps-cinema/es-tps-cinema.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="cinema.es.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="cassa.es.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
